--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "js-cookie": "^3.0.5",
     "mongodb": "^6.12.0",
     "next": "15.1.2",
+    "postprocessing": "^6.36.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "three": "^0.172.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
